cmake_minimum_required(VERSION 3.10)
project(cpp_samples)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)


add_executable(address_of address_of.cpp)
add_executable(aliasing_with_template aliasing_with_template.cpp)
add_executable(array_type array_type.cpp)
add_executable(variadic_template_indexing variadic_template_indexing.cpp)
add_executable(checked_deletor checked_deletor.cpp)
add_executable(compile_time_next_prev compile_time_next_prev.cpp)
add_executable(constexpr constexpr.cpp)
add_executable(construct construct.cpp)
add_executable(ctor_exception ctor_exception.cpp)
add_executable(mutable_lambda mutable_lambda.cpp)
add_executable(derived_virtual derived_virtual.cpp)
add_executable(explicit_deduction explicit_deduction.cpp)
add_executable(folding folding.cpp)
add_executable(friend friend.cpp)
add_executable(from_to from_to.cpp)
add_executable(full_template_specialization full_template_specialization.cpp)
add_executable(function_template_friendship function_template_friendship.cpp)
add_executable(function_traits function_traits.cpp)
add_executable(pass_return_same_type pass_return_same_type.cpp)
add_executable(lambda_unary lambda_unary.cpp)
add_executable(lower_bound lower_upper_bound.cpp)
add_executable(mapping mapping.cpp)
